Project/bin/iptables.rules.v4
# Generated by iptables-save v1.8.7 on Mon May 16 13:17:23 2022
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [11436:2645647]
:OUTPUT ACCEPT [9343:1424263]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2222 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5001 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i wlan0 -j ACCEPT
-A INPUT -j DROP
COMMIT
# Completed on Mon May 16 13:17:23 2022
# Generated by iptables-save v1.8.7 on Mon May 16 13:17:23 2022
*nat
:PREROUTING ACCEPT [2368:297387]
:INPUT ACCEPT [459:37753]
:OUTPUT ACCEPT [382:30025]
:POSTROUTING ACCEPT [69:5902]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon May 16 13:17:23 2022
